Fix Vercel build issues
- Added TypeScript path aliases (@/*) for imports
- Fixed Stripe API version (2024-04-10 → 2023-10-16)
- Fixed billing portal API (customer_email → customer)
- Excluded scripts directory from TypeScript compilation
- All dependencies verified (Stripe, Supabase)
- Production build successful ✅

Build output:
- 12 pages generated
- 10 API routes compiled
- Middleware working
- Ready for Vercel deployment

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,11 @@
         "name": "next"
       }
     ],
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./*"]
+    }
   },
   "include": [
     "next-env.d.ts",
@@ -30,6 +34,7 @@
     "**/*.tsx"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "scripts"
   ]
 }
