Remove Stripe/Supabase - Make Actor Lab 100% free

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,4 @@
+# Required - Core Actor Lab functionality
 OPENAI_API_KEY=sk-xxx
 NEXT_PUBLIC_BASE_URL=https://actorlab.tombstonedash.com
 NODE_ENV=production
-
-# Stripe (Optional - for Pro subscriptions)
-STRIPE_SECRET_KEY=sk_live_xxx
-STRIPE_PRICE_ID=price_xxx
-STRIPE_WEBHOOK_SECRET=whsec_xxx
-NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_live_xxx
-
-# Supabase (Optional - for user authentication)
-NEXT_PUBLIC_SUPABASE_URL=https://xyz.supabase.co
-NEXT_PUBLIC_SUPABASE_ANON_KEY=anon_key_here
-SUPABASE_SERVICE_ROLE_KEY=service_role_key_here
