--- a/package.json
+++ b/package.json
@@ -9,15 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.76.1",
     "axios": "^1.6.2",
     "framer-motion": "^10.16.0",
     "lucide-react": "^0.294.0",
     "next": "^14.0.0",
     "openai": "^4.20.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "stripe": "^14.25.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
